@@ -132,7 +132,7 @@ _sles_default_native(int                f_id,
       multigrid = 1;
     }
     if (!strcmp(name, "yplus_wall")) { /* distyp.f90 */
-      sles_it_type = CS_SLES_JACOBI;
+      sles_it_type = CS_SLES_P_SYM_GAUSS_SEIDEL;
     }
     else if (   !strcmp(name, "hydrostatic_p")  /* calhyd.f90 */
              || !strcmp(name, "potential")) {   /* predfl.f90 */
@@ -156,7 +156,7 @@ _sles_default_native(int                f_id,
       sles_it_type = CS_SLES_PCG;
     }
     else if (!strcmp(name, "Pr compress")) { /* resopv.f90 */
-      sles_it_type = CS_SLES_JACOBI;
+      sles_it_type = CS_SLES_P_SYM_GAUSS_SEIDEL;
     }
     else if (!strcmp(name, "PoissonL")) { /* lageqp.f90 */
       sles_it_type = CS_SLES_PCG;
@@ -184,7 +184,7 @@ _sles_default_native(int                f_id,
         multigrid = 1;
     }
     else
-      sles_it_type = CS_SLES_JACOBI;
+      sles_it_type = CS_SLES_P_SYM_GAUSS_SEIDEL;
   }
 
   if (multigrid == 1) {
